css/style.css
::-webkit-scrollbar {
    width: 0px;
}

body {
	background-color: #d4ebf2;
    width: 100%;
    height: 100%;
    margin: 0px;
    padding:0px;
}

@font-face {
    font-family: 'Kontora';
    src: url(Kontora/Kontora\ Bold.otf);
}

h1, h2, h3, h4 {
    /* font-family: 'Kontora'; */
    font-family: 'Arial Rounded MT Bold';
    color: 	#2e4b99;
	font-style: normal;
}

h1 {
	font-weight: 400;
    font-size: 15vh;
    letter-spacing: 8px;
    text-align: center;
    margin: 0%;
    padding-top: 100px;
    padding-bottom: 30px;
}

h2 {
	font-weight: 400;
    font-size: 5vh;
    letter-spacing: 5px;
    text-align: center;
    margin: 0%;
    padding-top: 100px;
    padding-bottom: 50px;
}

h3 {
	font-weight: 400;
    font-size: 5vh;
    letter-spacing: 5px;
    text-align: center;
    margin: 0%;
    padding-top: 70px;
}

h4 {
	font-weight: 400;
    font-size: 5vh;
    letter-spacing: 3px;
    text-align: left;
    margin: 0%;
    padding-top: 20px;
    padding-left: 20px;
}

h5 {
    font-family: 'League-Bold' , sans-serif;
    color: 	#2e4b99;
	font-style: normal;
	font-weight: 400;
    font-size: 20px;
    letter-spacing: 3px;
    text-align: center;
    margin: 0%;
    padding-top: 20px;
    padding-left: 50px;
    padding-right: 50px;
}

span {
    font-family: 'League-Bold' , sans-serif;
	color: 	#ffffff;
	font-style: normal;
	font-weight: 400;
    font-size: 5vh;
    letter-spacing: 5px;
    text-shadow: 2px 2px 6px #2e4b99;
}

img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 30%;
}

.overlay {
    position: absolute;
    background-color: rgba(255, 255, 255, 0.1);
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
    background-size: cover;
    width: 100%;
    height: 100%;
}

.blur {
    background-color: rgba(255, 255, 255, 0.5);
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    background-size: cover;
    height: 100%;
}

.home {
    text-shadow: 2px 2px 3px #ffffff;
}

#TitleHeader {
    position: relative;
    background-image: url("../textures/sushi-wallpaper.jpg");
    background-size: cover;
    width: 100%;
}

canvas {
    position: absolute;
}

.headerStyle {
    height: 100vh;
} 

.fillheight {
    height:100%;
}

